<resources>
    <string name="app_name">Edzesnaplo v3</string>
    <string name="app_name_v4">Edzésnapló</string>
    <string name="app_name_v4_2">Edzésnapló NEW</string>
    <string name="menu_mentett_naplok_title">Mentett naplók</string>
    <string name="sorozat_list_title">Elvégzett sorozatok</string>
    <string name="korabbi_sorozat_list_title">Korábban elvégzett sorozatok</string>
    <string name="welcome_title_belepo">Belépés az Edzésnaplóba</string>
    <string name="welcome_mentett_naplok_title">Mentett naplók</string>
    <string name="welcome_gyakorlatok_title">Gyakorlatok</string>
    <string name="welcome_belepo_desc">Üdvözöllek az edzésnapló alkalmazásban!</string>
    <string name="welcome_mentett_naplok_desc">Eddigi mentett naplók megtekintése</string>
    <string name="welcome_gyakorlatok_desc">Gyakorlatok megtekintése és szerkesztése</string>
    <string name="welcomeimage">WelcomeImage</string>
    <string name="mvvm_belepes_btn_label">Edzés megkezdése</string>
    <string name="mvvm_naplok_btn_label">Mentett naplók</string>
    <string name="mvvm_tervek_btn_label">Edzéstervek</string>
    <string name="mvvm_gyakorlatok_btn_label">Gyakorlatok</string>
    <string name="mvvm_belepo_info_label">Napló részletek</string>
    <string name="mvvm_permissions_warning">A médiatartalmak elérését mindenképpen elkell fogadnod, különben nem tudod használni az alkalmazást!</string>
    <string name="mvvm_edzes_nezet_gyakorlat_label">Válassz egy gyakorlatot</string>
    <string name="mvvm_mentett_naplok_warning_label">Nincsenek mentve naplók</string>
    <string name="mvvm_gyakorlatok_warning_label">Nincsenek gyakorlatok rögzítve</string>
    <string name="mvvm_saved_tablet_info">Kérlek válassz egy naplót a részletekért!</string>
    <string name="mvvm_tevekenyseg_sorozat_add_label">Sorozat hozzáadása</string>
    <string name="mvvm_tevekenyseg_sorozat_stopper_0">00:00</string>
    <string name="mvvm_tevekenyseg_sorozat_szorzo1">x10</string>
    <string name="mvvm_tevekenyseg_suly_label">Súly</string>
    <string name="mvvm_tevekenyseg_x">X</string>
    <string name="mvvm_tevekenyseg_ismetles_label">Ismétlés</string>
    <string name="mvvm_tevekenyseg_sulynovelo_image_desc">Súly növelése</string>
    <string name="mvvm_tevekenyseg_sulycsokk_image_desc">Súly csökkentése</string>
    <string name="mvvm_tevekenyseg_ismnovelo_image_desc">Ismétlés növelése</string>
    <string name="mvvm_tevekenyseg_ismcsokk_image_desc">Ismétlés csökkentése</string>
    <string name="mvvm_tevekenyseg_ujgyak_label">new</string>
    <string name="mvvm_tevekenyseg_sorozat_plusz">add</string>
    <string name="mvvm_alert_dialog_img_desc">Edzés - tevékenyság elhagyása</string>
    <string name="mvvm_tevekenyseg_alert_backpressed">Ha visszalépsz az edzés jelenlegi állása törlődik, biztosan akarod?</string>
    <string name="mvvm_edzesterv_keszito_warning_backpressed">Visszalépés az edzésterv mentése nélkül, a terv elveszik?</string>
    <string name="mvvm_belepo_logo_desc">Logo1</string>
    <string name="mvvm_edzesterv_belepo_title">Edzésterv tervező</string>
    <string name="mvm_edzesterv_belepo_tervezo_open_label">Belépés a tervezőbe</string>
    <string name="mvm_edzesterv_belepo_terv_label">Edzéstervek\nmegtekintése</string>
    <string name="mvvm_edzesterv_title_layout_button_options">Adott edzésterv további opciók</string>
    <string name="mvvm_edzesterv_title_layout_button_del">Adott edzésterv törlése</string>
    <string name="mvvm_edzesterv_title_layout_button_save">Adott edzésterv mentése</string>
    <string name="mvvm_edzesterv_title_layout_button_edit">Adott edzésterv szerkesztése</string>
    <string name="mvvm_edzesterv_title_layout_terv_label">Edzésterv elnevezés</string>
    <string name="edzesterv_menu_betoltes">Terv betöltése</string>
    <string name="gyakorlat_valaszto_terv_megnevezes_simple">Terv megnevezés</string>
    <string name="mvvm_edzesterv_belepo_info_label">Információ</string>
    <string name="mvvm_gyakorlatok_activity_menu_title">Gyakorlatok</string>
    <string name="mvvm_gyakorlatok_menu_search_label">Keresés</string>
    <string name="mvvm_gyakorlat_valaszto_tablet_fragment_video_warning_label">Nincs videólink megadva, vagy nem válaszottál gyakorlatot</string>
    <string name="mvvm_gyakvalaszto_layout_title">Gyakorlatok</string>
    <string name="mvvm_gyakorlat_video_link_shared_title">Video link mentése</string>
    <string name="mvvm_gyakorlat_video_link_shared_link_hint">videó link ide kerül...</string>
    <string name="mvvm_gyakorlat_video_link_shared_link_poz_hint">Pozició, ha van ilyen (alap=0)</string>
    <string name="mvvm_gyakorlat_video_link_shared_gyak_label">Melyik gyakorlathoz mented?</string>
    <string name="mvvm_gyakorlat_video_link_shared_csopszuro_label">Izomcsoport szűrő:</string>
    <string name="loading_layout_label">Betöltés...</string>
    <string name="gyakorlat_search_menu_szerkeszt">Szerkesztés</string>
    <string name="gyakorlat_search_menu_torles">Törlés</string>
    <string name="gyakorlat_search_menu_video">Video</string>
    <string name="gyak_activity_tablet_label1">Gyakorlat ill. izomcsoport kiválasztása</string>
    <string name="gyak_report_activity_suylismchart_label">Összes súly és ismétlés</string>
    <string name="gyak_report_activity_elteltido_label">Eltelt idő</string>
    <string name="widget_img_label">mutató</string>
    <string name="gyakorlat_video_saver_belepo_kep">Belépő kép</string>
    <string name="gyakActivitySzerkMenu_sorozat_label">Sorozat</string>
    <string name="gyakActivitySzerkMenu_diagram_label">Diagram</string>
    <string name="gyakActivitySzerkMenu_video_label">Video</string>
    <string name="gyakActivitySzerkMenu_delete_label">Törlés</string>
    <string name="gyakActivitySzerkMenu_szerk_label">Szerkesztés</string>
    <string name="gyakActivitySzerkMenu_new_label">Új</string>
    <string name="gyak_activity_options_menu_sorozat_labeldesc">Korábbi sorozatok megtekintése</string>
    <string name="gyak_activity_options_menu_sorozat_label">Korábbi sorozat</string>
    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="szuperszett_triszett_felv_tele">Szuperszett, triszett felvétele</string>
    <string name="mvvm_tevekenyseg_sorozat_minusz">kivesz</string>
</resources>
