<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/ujgyak"
        android:icon="@drawable/ic_add"
        android:enabled="true"
        android:title="@string/gyakActivitySzerkMenu_new_label" />

    <item
        android:id="@+id/gyakszerk"
        android:icon="@drawable/ic_edit"
        android:enabled="true"
        android:title="@string/gyakActivitySzerkMenu_szerk_label" />
    <item
        android:id="@+id/gyaktorol"
        android:icon="@drawable/ic_delete"
        android:enabled="true"
        android:title="@string/gyakActivitySzerkMenu_delete_label" />


    <item
        android:id="@+id/gyakszerk_menu_video"
        android:icon="@drawable/ic_ondemand_video"
        android:enabled="true"
        android:title="@string/gyakActivitySzerkMenu_video_label" />

    <item
        android:id="@+id/korabbi_sorozat_optmenu"
        android:title="@string/gyak_activity_options_menu_sorozat_label"
        android:enabled="true"
        android:icon="@drawable/ic_walk_black_light"
        android:contentDescription="@string/gyak_activity_options_menu_sorozat_labeldesc"
        />
</menu>