<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/gyakorlatokSearch"
        android:icon="@drawable/ic_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="@string/mvvm_gyakorlatok_menu_search_label" />

    <item
        android:id="@+id/korabbi_sorozat_optmenu"
        android:title="@string/gyak_activity_options_menu_sorozat_label"
        android:enabled="true"
        android:icon="@drawable/ic_directions_walk_black_24dp"
        app:showAsAction="withText|ifRoom"
        android:iconTint="@color/recoff"
        android:contentDescription="@string/gyak_activity_options_menu_sorozat_labeldesc"
        />
</menu>